--- a/app/src/main/res/menu/mainpagemenu.xml
+++ b/app/src/main/res/menu/mainpagemenu.xml
@@ -5,14 +5,16 @@
     <item android:id="@+id/itemsearch"
         android:icon="@drawable/ic_baseline_search_24"
         android:title="Search"
-        app:showAsAction="always
-"/>
+        app:showAsAction="always"/>
     <item android:id="@+id/item1"
         android:title="Name"
         app:showAsAction="never"/>
     <item android:id="@+id/item2"
         android:icon="@drawable/ic_baseline_settings_24"
         android:title="Settings"
+        app:showAsAction="never"/>
+    <item android:id="@+id/item3"
+        android:title="LogOut"
         app:showAsAction="never"/>
 
 </menu>
