--- a/app/src/main/res/menu/mainpagemenu.xml
+++ b/app/src/main/res/menu/mainpagemenu.xml
@@ -9,7 +9,7 @@
     <item android:id="@+id/item1"
         android:title="Name"
         app:showAsAction="never"/>
-    <item android:id="@+id/item2"
+    <item android:id="@+id/itemSettings"
         android:icon="@drawable/ic_baseline_settings_24"
         android:title="Settings"
         app:showAsAction="never"/>
